--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start-build": "yarn install -g serve & serve -s build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn install & react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
